--- a/exchange-backend/package.yaml
+++ b/exchange-backend/package.yaml
@@ -14,7 +14,9 @@ description:         Please see the README on GitHub at <https://github.com/nech
 dependencies:
 - base >= 4.7 && < 5
 - aeson
+- bytestring
 - postgresql-simple
+- resource-pool
 - servant
 - servant-server
 - uuid
