DBIO as Reader, implement all query methods from Postgres.Simple, expose Tickers and Orders API

--- a/exchange-backend/package.yaml
+++ b/exchange-backend/package.yaml
@@ -15,12 +15,13 @@ dependencies:
 - base >= 4.7 && < 5
 - aeson
 - bytestring
-- free
 - postgresql-simple
 - resource-pool
+- scientific
 - servant
 - servant-server
 - time
+- transformers
 - uuid
 - wai
 - warp
